--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.1.23</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional> <!-- IntelliJ IDEA本地测试这个true、false热部署都有效 -->
+        </dependency>
     </dependencies>
 
     <build>
@@ -90,6 +95,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
 
             </plugin>
+
         </plugins>
     </build>
 
